<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound" />

    <CheckBox
        android:id="@+id/removecompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoremove" />

    <CheckBox
        android:id="@+id/removemissed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoremovemissed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showtaskin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/showdialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialogwindow" />

            <RadioButton
                android:id="@+id/shownotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificatiobar" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/save"
            style="@style/DialogButton"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_marginTop="15sp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            style="@style/DialogButton"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:layout_marginTop="15sp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>