<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/TasksList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasklist" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>