<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/task_check"
        style="@style/TableBorder"
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:scaleType="fitCenter"
        android:src="@drawable/accept" 
        android:contentDescription="@string/empty"/>

    <TextView
        android:id="@+id/task_name"
        style="@style/TableBorder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:text="@string/taskname"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/task_time"
        style="@style/TableBorder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:text="@string/time"
        android:textAppearance="@android:style/TextAppearance.Large" />

</LinearLayout>