<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/Label"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5sp" android:layout_marginRight="5sp"/>

        <EditText
            android:id="@+id/nameinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Label"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5sp" android:layout_marginRight="5sp"/>

        <Spinner
            android:id="@+id/typespiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Types" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/daylayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Label"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="@string/day"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/dayspiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Weekdays" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/datelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Label"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5sp" android:layout_marginRight="5sp"/>

        <EditText
            android:id="@+id/dateinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/Label"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="5sp" android:layout_marginRight="5sp"/>

        <EditText
            android:id="@+id/timeinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" android:focusable="false">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/messagelable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/messageinput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.46"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp" >

        <Button
            android:id="@+id/save"
            style="@style/DialogButton"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            style="@style/DialogButton"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>